directory file, grid, list, and styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li>Lesson 06: <a href="https://josuebce.github.io/wdd230/lesson3/color-shceme.html"> Site Plan: Part 2 </a></li>
             <li>Lesson 07: <a href="https://josuebce.github.io/wdd230/chamber/discover.html"> Discover Page (Chamber of Commerce) </a></li>
             <li>Lesson 08: <a href="https://josuebce.github.io/wdd230/lesson-8/tablebuild.html"> Table Build  </a></li>
-            <li>Lesson 09: <a href=""> Title </a></li>
+            <li>Lesson 09: <a href="https://josuebce.github.io/wdd230/lesson-9/prophets.html"> Prophets Card </a></li>
             <li>Lesson 10: <a href=""> Title </a></li>
             <li>Lesson 11: <a href=""> Title </a></li>
         </ul>
