--- a/lesson-9/prophets.html
+++ b/lesson-9/prophets.html
@@ -15,7 +15,7 @@
         <div class="cards"></div>
       </main>
       <footer>
-        Your name here | 🏛 BYU-Idaho | WDD 230
+        Josué Benjamín Centuríon | 🏛 BYU-Idaho | WDD 230
       </footer>
       <script src="./js/prophets.js"></script>
 </body>
