adjusting layout and heading

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -54,15 +54,17 @@
             <i onclick="myFunction()">❌</i>
         </div>
     </header>
-        <div id="main-discovery">
+    <div id="main-discovery">
         <div class="menu">
-            <img src="./images/grid-icon.png"id="grid-icon">
-            <img src="./images/list-icon.png" id="list">
+            <h2>Business Directory</h2>
+            <div>
+                <img src="./images/grid-icon.png" id="grid-icon" alt="grid icon">
+                <img src="./images/list-icon.png" id="list" alt="list icon">
+            </div>
+        </div> 
+        <div id="companies" class="grid">
         </div>
-        <hr>
-        <article id="companies" class="grid">
-       </article>
-       </div>
+    </div>
     <footer>
         <div class="footer-main">
             <div class="footer-left">
