design, styling and updating

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -25,7 +25,7 @@
     <header>
 
         <div class="name">
-            <img src="/wdd230/lesson3/images/logo.png" alt="Chamber logo">
+           <a href="index.html" > <img src="/wdd230/lesson3/images/logo.png" alt="Chamber logo"></a>
             <h1>Argentine Chamber of Commerce</h1>
         </div>
         <nav>
