--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,11 +23,10 @@
 <body>
 
     <header>
-
         <div class="name">
-            <img src="/wdd230/lesson3/images/logo.png" alt="Chamber logo">
-            <h1>Argentine Chamber of Commerce</h1>
-        </div>
+            <a href="index.html" > <img src="/wdd230/lesson3/images/logo.png" alt="Chamber logo"></a>
+             <h1>Argentine Chamber of Commerce</h1>
+         </div>
         <nav>
             <ul id="primaryNav">
                 <li class="active"><a href="#">Home</a></li>
