--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -31,9 +31,9 @@
     <header>
 
         <div class="name">
-            <img src="/wdd230/lesson3/images/logo.png" alt="Chamber logo">
-            <h1>Argentine Chamber of Commerce</h1>
-        </div>
+            <a href="index.html" > <img src="/wdd230/lesson3/images/logo.png" alt="Chamber logo"></a>
+             <h1>Argentine Chamber of Commerce</h1>
+         </div>
         <nav>
             <ul id="primaryNav">
                 <li ><a href="index.html">Home</a></li>
