--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/medium.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/large.css">
-    <title>Argentine Chamber of Commerce</title>
+    <title>Directory</title>
 
 </head>
 
@@ -92,7 +92,6 @@
         </div>
     </footer>
     <script src="/wdd230/chamber/js/scripts.js"></script>
-    <script src="/wdd230/chamber/js/windchill.js"></script>
 </body>
 
 </html>
