Membership section and styling

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -90,7 +90,7 @@
         </div>
         <div class="building">
             <picture> <img class="discover-img" src="./images/placeholder.webp"
-                    data-src="./images/chaco-chamber-of-commerce.jpg" alt="Chaco Chamber of Commerce"></picture>
+                    data-src="./images/chaco-chamber-of-commerce.webp" alt="Chaco Chamber of Commerce"></picture>
 
             <div>
                 <p>
