--- a/chamber/index.html
+++ b/chamber/index.html
@@ -97,7 +97,7 @@
             <div class="spotlight">
                 <h2>Globant</h2>
                 <div class="images">
-                    <img src="/wdd230/chamber/images/globant.png" alt="Globant Company">
+                    <img src="/wdd230/chamber/images/globant.webp" alt="Globant Company">
                 </div>
                 <h4>Have Fun</h4>
                 <hr>
@@ -107,7 +107,7 @@
             <div class="spotlight">
                 <h2>Mercado Libre</h2>
                 <div class="images">
-                    <img src="/wdd230/chamber/images/mercado-libre.png" alt="Mercado Libre Company">
+                    <img src="/wdd230/chamber/images/mercado-libre.webp" alt="Mercado Libre Company">
                 </div>
 
                 <h4>codo a codo, hasta que llegue lo mejor</h4>
@@ -118,7 +118,7 @@
             <div class="spotlight">
                 <h2>Le Utthe</h2>
                 <div class="images">
-                    <img src="/wdd230/chamber/images/le-utthe.png" alt="Le Utthe Company">
+                    <img src="/wdd230/chamber/images/le-utthe.webp" alt="Le Utthe Company">
                 </div>
                 <h4>codo a codo, hasta que llegue lo mejor</h4>
                 <hr>
