--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="author" content="Josue Centurion">
-    <meta name="description" content="This is the Join page of the project chamber of commerce for the course WDD230 (BYU - Idaho). It presents a form that the user can submit to apply and be part of this organization">
+    <meta name="description"
+        content="This is the Join page of the project chamber of commerce for the course WDD230 (BYU - Idaho). It presents a form that the user can submit to apply and be part of this organization">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
         rel="stylesheet">
     <link rel="icon" href="/wdd230/chamber/favicon.ico">
 
-   <title>Join</title>
+    <title>Join</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
@@ -25,14 +26,14 @@
     <header>
 
         <div class="name">
-            <a href="index.html" > <img src="/wdd230/lesson3/images/logo.png" alt="Chamber logo"></a>
-             <h1>Argentine Chamber of Commerce</h1>
-         </div>
+            <a href="index.html"> <img src="/wdd230/lesson3/images/logo.png" alt="Chamber logo"></a>
+            <h1>Argentine Chamber of Commerce</h1>
+        </div>
         <nav>
             <ul id="primaryNav">
-                <li ><a href="index.html">Home</a></li>
-                <li ><a href="discover.html">Discover</a></li>
-                <li ><a href="directory.html">Directory</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discover.html">Discover</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li class="active"><a href="join.html">Join</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -54,45 +55,79 @@
             <i onclick="myFunction()">❌</i>
         </div>
     </header>
-    <main class="main-join">
-        <div class="heading-join">
-            <h2>Membership Application</h2>
+    <div class="join-page">
+        <div class="membership-div">
+            <h2 class="heading-join">Membership Levels</h2>
+            <h3>1. NP Membership</h3>
+            <ul>
+                <li>Discounts of
+                    up 50% in Marketing Campaigns</li>
+                <li>Internal Promoting between businesses associated</li>
+                <li>2% Refferal couta </li>
+            </ul>
+            <h3>2. Bronze Membership.</h3>
+            <ul>
+                <li>Discounts in all our associated businesses (20% - 40%).</li>
+                <li>Refferal assistance (Project Manager Tutoring)</li>
+                <li>50% Discount on training events and workshops</li>
+
+            </ul>
+            <h3>3. Silver Membership</h3>
+            <ul>
+                <li> Semi-annual Participation in the Chamber Conference</li>
+                <li>Your business becomes part of our branding campaign </li>
+                <li>Referrals Bonuses of 5% of monthly quota </li>
+            </ul>
+            <h3>4. Golden Membership</h3>
+            <ul>
+                <li>Opinion in general councils and decision making for spreading opportunities </li>
+                <li>60% discounts buying in all associated commerces</li>
+                <li>Includes all Bronze and Silver benefits</li>
+             
+
+            </ul>
         </div>
-        <div class="form-join">
-            <form method="get" action="thanks.html">
-                <fieldset>
-                    <label class="top">First Name*<input autofocus type="text" name="fname" required></label>
-                    <label class="top">Last Name*<input type="text" name="lname" required></label>
-                    <label class="top">Phone*<input type="tel" name="phone"></label>
-                    <label class="top">Email*<input type="email" name="email" required
-                            placeholder="mypersonal@email.com"></label>
-                    <label class="top"> Business Name/Title<input type="text" name="businessname" required></label>
-                    <label class="top"> Business Position<input type="text" name="businessposition"
-                            pattern="[A-Za-z- ]{6,}"></label>
+        <main class="main-join">
+            <div class="heading-join">
+                <h2>Membership Application</h2>
+            </div>
+            <div class="form-join">
+                <form method="get" action="thanks.html">
+                    <fieldset>
+                        <label class="top">First Name*<input autofocus type="text" name="fname" required></label>
+                        <label class="top">Last Name*<input type="text" name="lname" required></label>
+                        <label class="top">Phone*<input type="tel" name="phone"></label>
+                        <label class="top">Email*<input type="email" name="email" required
+                                placeholder="mypersonal@email.com"></label>
+                        <label class="top"> Business Name/Title<input type="text" name="businessname" required></label>
+                        <label class="top"> Business Position<input type="text" name="businessposition"
+                                pattern="[A-Za-z- ]{6,}"></label>
 
-                </fieldset>
-                <fieldset>
+                    </fieldset>
+                    <fieldset>
 
-                    <label class="top"> Membership Level
-                        <select name="subject" required>
-                            <option value="">Please Select </option>
-                            <option value="software">
-                                1. NP Membership is for non 
-                                    profit organizations and there is no fee. 
-                            </option>
-                            <option value="creative">2. Bronze Membership.</option>
-                            <option value="info">3. Silver Membership</option>
-                            <option value="data">4. Gold Membership</option>
-                        </select>
-                    </label>
-                    <label> Describe your Business <textarea name="businessDescription" rows="4" cols="50">
+                        <label class="top"> Membership Level
+                            <select name="subject" required>
+                                <option value="">Please Select </option>
+                                <option value="software">
+                                    1. NP Membership is for non
+                                    profit organizations and there is no fee.
+                                </option>
+                                <option value="creative">2. Bronze Membership.</option>
+                                <option value="info">3. Silver Membership</option>
+                                <option value="data">4. Gold Membership</option>
+                            </select>
+                        </label>
+                        <label> Describe your Business <textarea name="businessDescription" rows="4" cols="50">
                 </textarea></label>
-                    <input type="hidden" name="date" id="date">
-                </fieldset>
-                <label><input type="submit" name="submitBtn" value="Send my Application" class="submitBtn"></label>
-            </form>
-        </div>
-    </main>
+                        <input type="hidden" name="date" id="date">
+                    </fieldset>
+                    <label><input type="submit" name="submitBtn" value="Send my Application" class="submitBtn"></label>
+                </form>
+            </div>
+        </main>
+
+    </div>
 
     <footer>
         <div class="footer-main">
