--- a/lesson-8/tablebuild.html
+++ b/lesson-8/tablebuild.html
@@ -28,7 +28,7 @@
             </tr>
             <tr>
                 <td>August</td>
-                <td>8,000</td>
+                <td class="active">8,000</td>
             </tr>
             <tr>
                 <td>September</td>
