--- a/chamber/join.html
+++ b/chamber/join.html
@@ -60,6 +60,7 @@
             <h2 class="heading-join">Membership Levels</h2>
             <h3>1. NP Membership</h3>
             <ul>
+                <li>Cost: <strong>Free</strong></li>
                 <li>Discounts of
                     up 50% in Marketing Campaigns</li>
                 <li>Internal Promoting between businesses associated</li>
@@ -67,6 +68,7 @@
             </ul>
             <h3>2. Bronze Membership.</h3>
             <ul>
+                <li>Cost: $500  /Month</li>
                 <li>Discounts in all our associated businesses (20% - 40%).</li>
                 <li>Refferal assistance (Project Manager Tutoring)</li>
                 <li>50% Discount on training events and workshops</li>
@@ -74,12 +76,14 @@
             </ul>
             <h3>3. Silver Membership</h3>
             <ul>
+                <li>Cost: $750 /Month</li>
                 <li> Semi-annual Participation in the Chamber Conference</li>
                 <li>Your business becomes part of our branding campaign </li>
                 <li>Referrals Bonuses of 5% of monthly quota </li>
             </ul>
             <h3>4. Golden Membership</h3>
             <ul>
+                <li>Cost: $1050 /Month</li>
                 <li>Opinion in general councils and decision making for spreading opportunities </li>
                 <li>60% discounts buying in all associated commerces</li>
                 <li>Includes all Bronze and Silver benefits</li>
