--- a/lesson-10/weather-api.html
+++ b/lesson-10/weather-api.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>HTML TABLES EXAMPLE </h1>
+    <h1>Wheather API Activity</h1>
 </header>
   <main>
     <h1>OpenWeatherMap.org API Test</h1>
