fixing date and last visit calculator

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -45,7 +45,7 @@
         </div>
         <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
         <div class="current-date">
-            <p><span id="banner">Welcome, Thank you for visiting Us! </span><span class="visits"></span></p>
+            <span id="banner">Welcome, Thank you for visiting Us! </span>
         </div>
         <div id="myDIV">
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
@@ -54,6 +54,9 @@
     </header>
     <div class="heading-discover">
         <h1>Discover Who We Are </h1>
+        <div>
+            <p><span class="visits">Welcome, Thank you for visiting Us!</span></p>
+        </div>
     </div>
     <main class="main-discover">
         <div class="building">
