--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
         <div class="current-date">
-            <p><span id="banner">Welcome, Thank you for visiting Us! </span><span class="visits"></span></p>
+            <p><span id="banner">Welcome, Thank you for visiting Us!<span class="visits"></span></span></p>
         </div>
         <div id="myDIV">
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
