--- a/chamber/index.html
+++ b/chamber/index.html
@@ -155,7 +155,7 @@
                 Project |
             <p id="updated"></p>
 
-
+            <p> || Weather data provided by <a href="https://openweathermap.org">OpenWeather</a>||</p>
         </div>
     </footer>
     <script src="/wdd230/chamber/js/scripts.js"></script>
