--- a/chamber/index.html
+++ b/chamber/index.html
@@ -94,38 +94,8 @@
                 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                 deserunt mollit anim id est laborum."</p>
         </section>
-        <section>
-            <div class="spotlight">
-                <h2>Globant</h2>
-                <div class="images">
-                    <img src="/wdd230/chamber/images/globant.webp" alt="Globant Company">
-                </div>
-                <h4>Have Fun</h4>
-                <hr>
-                <p> https://www.globant.com </p>
-                <p><a href="https://www.globant.com/contact"> hi@globant.com</a></p>
-            </div>
-            <div class="spotlight">
-                <h2>Mercado Libre</h2>
-                <div class="images">
-                    <img src="/wdd230/chamber/images/mercado-libre.webp" alt="Mercado Libre Company">
-                </div>
-
-                <h4>codo a codo, hasta que llegue lo mejor</h4>
-                <hr>
-                <p>https://mercadolibre.com/</p>
-                <p><a href="https://investor.mercadolibre.com/contact-us">mercadolibre</a></p>
-            </div>
-            <div class="spotlight">
-                <h2>Le Utthe</h2>
-                <div class="images">
-                    <img src="/wdd230/chamber/images/le-utthe.webp" alt="Le Utthe Company">
-                </div>
-                <h4>codo a codo, hasta que llegue lo mejor</h4>
-                <hr>
-                <p>Wind Speed: 2.3mph </p>
-                <p>Wind Chill: N/A</p>
-            </div>
+        <section id="spotlights">
+          
         </section>
         <section class="join-us">
             <button class="btn-2" onclick="window.location.href='https://josuebce.github.io/wdd230/chamber/index.html';">Join Us! </button>
@@ -136,7 +106,7 @@
         <div class="footer-main">
             <div class="footer-left">
                 <div class="footer-image">
-                    <img src="/wdd230/lesson3/images/logo-red.png" alt="Chamber logo">
+                    <img src="/wdd230/lesson3/images/logo-red.png" alt="Chamber logo"> 
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
