--- a/chamber/index.html
+++ b/chamber/index.html
@@ -58,7 +58,7 @@
             <div class="welcome-message">
                 <h2>Welcome, We are Argentina</h2>
             </div>
-            <div class="join-btn" onclick="window.location.href='https://josuebce.github.io/wdd230/chamber/index.html';">
+            <div class="join-btn" onclick="window.location.href='https://josuebce.github.io/wdd230/chamber/join.html';">
                 <h2>Join the Chamber</h2>
             </div>
             <picture>
@@ -98,7 +98,7 @@
           
         </section>
         <section class="join-us">
-            <button class="btn-2" onclick="window.location.href='https://josuebce.github.io/wdd230/chamber/index.html';">Join Us! </button>
+            <button class="btn-2" onclick="window.location.href='https://josuebce.github.io/wdd230/chamber/join.html';">Join Us! </button>
             <h5>Discover how to join the chamber of commerce and how it will benefit your organization!</h5>
         </section>
     </main>
