message for question and adding link

--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="icon" href="/wdd230/chamber/favicon.ico">
 
-    <title>Thank You </title>
+    <title>Thank You</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -38,7 +38,7 @@
                 <li ><a href="index.html">Home</a></li>
                 <li ><a href="discover.html">Discover</a></li>
                 <li ><a href="directory.html">Directory</a></li>
-                <li class="active" ><a href="join.html">Join</a></li>
+                <li ><a href="join.html">Join</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -62,9 +62,9 @@
     <main class="main-thanks">
         
         <div class="thanks-div">
-        <p>Application Successfully Submitted</p>           
-        <h1>Thanks for Applying</h1>
-        <p>We will let you know our decision. We <strong> highly appreciate your interest</strong>  </p>
+        <p id="success-msg">Application Successfully Submitted</p>           
+        <h1 id="message">Thanks for Applying</h1>
+        <p id="information">We will let you know our decision. We <strong> highly appreciate your interest</strong>  </p>
       <button class="submitBtn"  onclick="window.location.href='https://josuebce.github.io/wdd230/chamber/index.html';" > Go back Home </button> 
     </div>
     </main>
@@ -73,7 +73,7 @@
         <div class="footer-main">
             <div class="footer-left">
                 <div class="footer-image">
-                    <img src="/wdd230/lesson3/images/logo-red.png" alt="Chamber logo">
+                    <a href="index.html"><img src="/wdd230/lesson3/images/logo-red.png" alt="Chamber logo"></a>
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
