--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -34,8 +34,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
-                <li class="active"><a href="join.html">Join</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li ><a href="join.html">Join</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="icons">
@@ -112,7 +112,7 @@
         <div class="footer-main">
             <div class="footer-left">
                 <div class="footer-image">
-                    <img src="/wdd230/lesson3/images/logo-red.png" alt="Chamber logo">
+                    <a href="index.html"><img src="/wdd230/lesson3/images/logo-red.png" alt="Chamber logo"></a>
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
