updating links, styles and divs

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -72,7 +72,7 @@
             <h2>Ribbon Cutting</h2>
             <h3>The diamond Shack 💎</h3>
             <p>Join us for the grand opening of The Diamond Shack, Thursday at 1:00PM</p>
-            <p><a href="#"></a>more info...</p>
+            <a href="contact.html#contact-form" id="more-info"><p>more info...</p></a>
         </section>
         <section class="weather-section">
             <!-- Keeps Placeholders for the Weather Information -->
@@ -94,9 +94,9 @@
                 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                 deserunt mollit anim id est laborum."</p>
         </section>
-        <section id="spotlights">
+        <div id="spotlights">
           
-        </section>
+        </div>
         <section class="join-us">
             <button class="btn-2" onclick="window.location.href='https://josuebce.github.io/wdd230/chamber/join.html';">Join Us! </button>
             <h5>Discover how to join the chamber of commerce and how it will benefit your organization!</h5>
@@ -110,13 +110,13 @@
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
-                    <p>info</p>
+                    <a href="contact.html#contact-form"><p>info</p></a>
                 </div>
             </div>
             <div class="footer-right">
                 <p>www.argchamber.org</p>
                 <p>+(54) 9 3624 000000</p>
-                <p><i class="fa fa-map-marker"></i> location Map</p>
+                <a href="contact.html#maps"><p>📍 location Map </p></a>
             </div>
         </div>
         <hr>
