--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -80,7 +80,7 @@
         </div>
         
         <main class="main-join">
-            <div class="heading-join">
+            <div class="heading-join"  id="contact-form">
                 <h2>Contact Information</h2>
             </div>
             <div class="form-join">
@@ -104,7 +104,7 @@
                 </form>
             </div>
         </main>
-        <div class="map">
+        <div class="map" id="maps">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8929108393327!2d-58.372617684174905!3d-34.606869365173075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3352cdfb7986d%3A0x8ae80985732fffeb!2sAv.%20Leandro%20N.%20Alem%2036%2C%20C1003%20AAN%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1669125424393!5m2!1sen!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    </div>
     </div>
 
@@ -116,13 +116,13 @@
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
-                    <p>info</p>
+                    <a href="contact.html#contact-form"><p>info</p></a>
                 </div>
             </div>
             <div class="footer-right">
                 <p>www.argchamber.org</p>
                 <p>+(54) 9 3624 000000</p>
-                <p><i class="fa fa-map-marker"></i> location Map</p>
+                <a href="contact.html#maps"><p>📍 location Map </p></a>
             </div>
         </div>
         <hr>
