--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -77,13 +77,13 @@
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
-                    <p>info</p>
+                    <a href="contact.html#contact-form"><p>info</p></a>
                 </div>
             </div>
             <div class="footer-right">
                 <p>www.argchamber.org</p>
                 <p>+(54) 9 3624 000000</p>
-                <p><i class="fa fa-map-marker"></i> location Map</p>
+                <a href="contact.html#maps"><p>📍 location Map </p></a>
             </div>
         </div>
         <hr>
