--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="This is the Directory Page of the Chamber of Commerce Website. This page display what companies are part of this organization and some ways to contact them and know more about them ">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+        content="This is the Directory Page of the Chamber of Commerce Website. This page display what companies are part of this organization and some ways to contact them and know more about them. Where the data is fechted from a JSON file with all Information about the companies in the Chamber    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
         rel="stylesheet">
