--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="author" content="Josue Centurion">
-    <meta name="description" content="This is the Thanks page of the project chamber of commerce for the course WDD230 (BYU - Idaho). This pafe is the thank message after submitting the form">
+    <meta name="description" content="This is the Thanks page of the project chamber of commerce for the course WDD230 (BYU - Idaho). This page is the thank message after submitting the form">
       <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
