--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Josue Centurion">
     <meta name="description"
-        content="This is the Join page of the project chamber of commerce for the course WDD230 (BYU - Idaho). It presents a form that the user can submit to apply and be part of this organization">
+        content="This is the Contact page of the project chamber of commerce for the course WDD230 (BYU - Idaho). It presents a form that the user can submit to ask questions about this organization. It also displays a map where the office is located. It also brings general Information about the Chamber">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
