--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,8 +8,6 @@
     <meta name="description"
         content="This is the Directory Page of the Chamber of Commerce Website. This page display what companies are part of this organization and some ways to contact them and know more about them. Where the data is fechted from a JSON file with all Information about the companies in the Chamber    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
-        rel="stylesheet">
     <link rel="icon" href="/wdd230/chamber/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
@@ -68,7 +66,7 @@
         <div class="footer-main">
             <div class="footer-left">
                 <div class="footer-image">
-                    <a href="index.html"><img src="/wdd230/lesson3/images/logo-red.png" alt="Chamber logo"></a>
+                    <a href="index.html"><img src="/wdd230/lesson3/images/logo-red.webp" alt="Chamber logo"></a>
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
