--- a/chamber/join.html
+++ b/chamber/join.html
@@ -137,7 +137,7 @@
         <div class="footer-main">
             <div class="footer-left">
                 <div class="footer-image">
-                    <a href="index.html"><img src="/wdd230/lesson3/images/logo-red.png" alt="Chamber logo"></a>
+                    <a href="index.html"><img src="/wdd230/lesson3/images/logo-red.webp" alt="Chamber logo"></a>
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
