--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,7 +9,7 @@
         content="This is the Directory Page of the Chamber of Commerce Website. This page display what companies are part of this organization and some ways to contact them and know more about them. Where the data is fechted from a JSON file with all Information about the companies in the Chamber    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" href="/wdd230/chamber/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/medium.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/large.css">
