--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
         rel="stylesheet">
     <link rel="icon" href="/wdd230/chamber/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="css/normalize.css">    
     <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/medium.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/large.css">
@@ -163,11 +163,11 @@
         <div class="footer-main">
             <div class="footer-left">
                 <div class="footer-image">
-                    <a href="index.html"><img src="/wdd230/lesson3/images/logo-red.webp" alt="Chamber logo"></a>
+                    <a href="index.html"><img src="/wdd230/lesson3/images/logo-red.png" alt="Chamber logo"></a>
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
-                    <a href="contact.html#contact-form"><p>info</p></a>
+                    <p>info</p>
                 </div>
             </div>
             <div class="footer-right">
