--- a/chamber/join.html
+++ b/chamber/join.html
@@ -14,7 +14,7 @@
 
     <title>Join</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+        <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/medium.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/large.css">
