optimizing as possible

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -22,7 +22,7 @@
     <header>
 
         <div class="name">
-           <a href="index.html" > <img src="/wdd230/lesson3/images/logo.png" alt="Chamber logo"></a>
+           <a href="index.html" > <img src="/wdd230/lesson3/images/logo.webp" alt="Chamber logo"></a>
             <h1>Argentine Chamber of Commerce</h1>
         </div>
         <nav>
