--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -22,12 +22,12 @@
     <header>
 
         <div class="name">
-           <a href="index.html" > <img src="/wdd230/lesson3/images/logo.webp" alt="Chamber logo"></a>
+            <a href="index.html"> <img src="/wdd230/lesson3/images/logo.webp" alt="Chamber logo"></a>
             <h1>Argentine Chamber of Commerce</h1>
         </div>
         <nav>
             <ul id="primaryNav">
-                <li ><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li class="active"><a href="#">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
@@ -58,7 +58,7 @@
                 <img src="./images/grid-icon.png" id="grid-icon" alt="grid icon">
                 <img src="./images/list-icon.png" id="list" alt="list icon">
             </div>
-        </div> 
+        </div>
         <div id="companies" class="grid">
         </div>
     </div>
@@ -70,13 +70,17 @@
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
-                    <a href="contact.html#contact-form"><p>info</p></a>
+                    <a href="contact.html#contact-form">
+                        <p>info</p>
+                    </a>
                 </div>
             </div>
             <div class="footer-right">
                 <p>www.argchamber.org</p>
                 <p>+(54) 9 3624 000000</p>
-                <a href="contact.html#maps"><p>📍 location Map </p></a>
+                <a href="contact.html#maps">
+                    <p>📍 location Map </p>
+                </a>
             </div>
         </div>
         <hr>
