--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/wdd230/chamber/css/medium.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/large.css">
     <title>Directory</title>
-
+    <script src="/wdd230/chamber/js/scripts.js" defer></script>
 </head>
 
 <body>
@@ -89,10 +89,8 @@
                 Project |
             <p id="updated"></p>
 
-
         </div>
     </footer>
-    <script src="/wdd230/chamber/js/scripts.js"></script>
 </body>
 
 </html>
