--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -7,15 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="This is the Chamber of Commerce Website. It's a project assignment for the WDD230 Course at BYU - Idaho. This is the second web page. On this page has been applied the principle of Lazy-loading, hover: effects, responsiveness, and data management with localStorage keys and values.  ">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
-        rel="stylesheet">
+
     <link rel="icon" href="/wdd230/chamber/favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">    
     <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/medium.css">
-    <link rel="stylesheet" href="/wdd230/chamber/css/large.css">
+    <link rel="stylesheet" href="/wdd230/chamber/css/large.css"> 
+    <script src="/wdd230/chamber/js/scripts.js" defer></script>
+    <script src="/wdd230/chamber/js/general.js" defer></script>
     <title>Discover</title>
 </head>
 
@@ -163,7 +162,7 @@
         <div class="footer-main">
             <div class="footer-left">
                 <div class="footer-image">
-                    <a href="index.html"><img src="/wdd230/lesson3/images/logo-red.png" alt="Chamber logo"></a>
+                    <a href="index.html"><img src="/wdd230/lesson3/images/logo-red.webp" alt="Chamber logo"></a>
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
@@ -185,7 +184,6 @@
 
         </div>
     </footer>
-    <script src="/wdd230/chamber/js/scripts.js"></script>
 </body>
 
 </html>
