--- a/chamber/join.html
+++ b/chamber/join.html
@@ -11,13 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
         rel="stylesheet">
     <link rel="icon" href="/wdd230/chamber/favicon.ico">
-
-    <title>Join</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+       
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/medium.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/large.css">
+    <script src="/wdd230/chamber/js/scripts.js" defer></script>
+    <script src="/wdd230/chamber/js/general.js" ></script>
+    <title>Join</title>
 
 
 </head>
@@ -159,7 +161,7 @@
 
         </div>
     </footer>
-    <script src="/wdd230/chamber/js/scripts.js"></script>
+
 </body>
 
 </html>
