--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
         rel="stylesheet">
     <link rel="icon" href="/wdd230/chamber/favicon.ico">
+    <script src="/wdd230/chamber/js/scripts.js" defer></script>
+        <script src="/wdd230/chamber/js/general.js" ></script>
 
     <title>Thank You</title>
 
@@ -95,7 +97,6 @@
 
         </div>
     </footer>
-    <script src="/wdd230/chamber/js/scripts.js"></script>
 </body>
 
 </html>
