--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/medium.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/large.css">
-
+    <script src="/wdd230/chamber/js/scripts.js" defer></script>
 
 </head>
 
@@ -134,7 +134,6 @@
 
         </div>
     </footer>
-    <script src="/wdd230/chamber/js/scripts.js"></script>
 </body>
 
 </html>
