--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="icon" href="/wdd230/chamber/favicon.ico">
     <script src="/wdd230/chamber/js/scripts.js" defer></script>
-        <script src="/wdd230/chamber/js/general.js" ></script>
+        <script src="/wdd230/chamber/js/general.js" defer></script>
 
     <title>Thank You</title>
 
